// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxGroup component should render properly 1`] = `
.c13 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c13 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c15 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c15>:first-child {
  margin-bottom: 0.9rem;
}

.c2 {
  user-select: none;
  cursor: inherit;
  color: inherit;
}

.c7 {
  user-select: none;
  cursor: inherit;
  color: inherit;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c16 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-left: 4rem;
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #13181D;
}

.c11 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c11 .c12 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c9 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c9:checked~.c10 {
  border-color: #3872D2;
  background-color: #3872D2;
}

.c9:checked~.c10 .c12 {
  transform: scale(1);
}

.c9:checked~.c10 .c12 * {
  fill: #ffffff;
}

.c9:not(:checked)~.c10 {
  background-color: transparent;
  border-color: #13181D;
}

.c9:not(:disabled):focus~.c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c9:not(:disabled):focus:not(:checked)~.c10 {
  border-color: #3872D2;
}

.c8 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c5 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c5 * {
  cursor: pointer;
}

.c5.c5.c5:hover .c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c5.c5.c5:active .c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #3061B3;
}

.c14 {
  display: inline-flex;
  cursor: pointer;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c14 * {
  cursor: pointer;
}

.c14.c14.c14:hover .c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3061B3;
  background-color: #3061B3;
}

.c14.c14.c14:active .c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.5);
  border-color: #275093;
  background-color: #275093;
}

<div>
  <div
    aria-describedby="Cars-helper-text"
    class="c0"
    id="Cars-wrapper"
    type="checkbox"
  >
    <span
      class="c1 c2"
      id="Cars-label"
      textalign="initial"
      textcolor="inherit"
      textvariant="body1"
      textweight="Medium"
      type="checkbox"
    >
      Cars
    </span>
    <span
      class="c3"
      id="Cars-helper-text"
      type="checkbox"
    >
      Helper Text
    </span>
    <div
      class="c4"
      columns="1"
      id="Cars-options"
    >
      <label
        class="c5"
        for="Honda-Cars"
        id="Honda-Cars-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          id="Honda-Cars-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Honda
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            id="Honda-Cars"
            name="honda"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <label
        class="c14"
        for="Hyundai-Cars"
        id="Hyundai-Cars-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          id="Hyundai-Cars-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Hyundai
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            id="Hyundai-Cars"
            name="hyundai"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        aria-describedby="Tata-Cars-helper-text"
        class="c15"
        id="Tata-Cars-wrapper"
        type="checkbox"
      >
        <label
          class="c5"
          for="Tata-Cars-select-all"
          id="Tata-Cars-select-all-wrapper"
          labelposition="right"
        >
          <span
            class="c1 c7"
            id="Tata-Cars-select-all-label"
            labelposition="right"
            textalign="initial"
            textcolor="inherit"
            textvariant="body1"
            textweight="Medium"
            type="checkbox"
          >
            Tata
          </span>
          <div
            class="c8"
          >
            <input
              class="c9"
              id="Tata-Cars-select-all"
              type="checkbox"
            />
            <div
              class="c10 c11"
            >
              <svg
                class="c12 c13"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        <div
          class="c16"
          columns="2"
          id="Tata-Cars-options"
        >
          <label
            class="c5"
            for="Jaguar-Tata-Cars"
            id="Jaguar-Tata-Cars-wrapper"
            labelposition="right"
          >
            <span
              class="c6 c7"
              id="Jaguar-Tata-Cars-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              Jaguar
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                id="Jaguar-Tata-Cars"
                name="jaguar"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            class="c5"
            for="Land Rover-Tata-Cars"
            id="Land Rover-Tata-Cars-wrapper"
            labelposition="right"
          >
            <span
              class="c6 c7"
              id="Land Rover-Tata-Cars-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              Land Rover
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                id="Land Rover-Tata-Cars"
                name="landRover"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should render properly with disabled state 1`] = `
.c13 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c13 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c14 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c14>:first-child {
  margin-bottom: 0.9rem;
}

.c2 {
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
}

.c7 {
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c15 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-left: 4rem;
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #98A7B7;
}

.c11 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c11 .c12 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c9 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c9:checked~.c10 {
  border-color: #dfe4e9;
  background-color: #dfe4e9;
}

.c9:checked~.c10 .c12 {
  transform: scale(1);
}

.c9:checked~.c10 .c12 * {
  fill: #98A7B7;
}

.c9:not(:checked)~.c10 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c9:not(:disabled):focus~.c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c9:not(:disabled):focus:not(:checked)~.c10 {
  border-color: #3872D2;
}

.c8 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c5 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c5 * {
  cursor: not-allowed;
}

<div>
  <div
    aria-describedby="Cars-helper-text"
    class="c0"
    id="Cars-wrapper"
    type="checkbox"
  >
    <span
      class="c1 c2"
      disabled=""
      id="Cars-label"
      textalign="initial"
      textcolor="inherit"
      textvariant="body1"
      textweight="Medium"
      type="checkbox"
    >
      Cars
    </span>
    <span
      class="c3"
      disabled=""
      id="Cars-helper-text"
      type="checkbox"
    >
      Helper Text
    </span>
    <div
      class="c4"
      columns="1"
      id="Cars-options"
    >
      <label
        class="c5"
        disabled=""
        for="Honda-Cars"
        id="Honda-Cars-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          disabled=""
          id="Honda-Cars-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Honda
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Honda-Cars"
            name="honda"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <label
        class="c5"
        disabled=""
        for="Hyundai-Cars"
        id="Hyundai-Cars-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          disabled=""
          id="Hyundai-Cars-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Hyundai
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            disabled=""
            id="Hyundai-Cars"
            name="hyundai"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        aria-describedby="Tata-Cars-helper-text"
        class="c14"
        id="Tata-Cars-wrapper"
        type="checkbox"
      >
        <label
          class="c5"
          disabled=""
          for="Tata-Cars-select-all"
          id="Tata-Cars-select-all-wrapper"
          labelposition="right"
        >
          <span
            class="c1 c7"
            disabled=""
            id="Tata-Cars-select-all-label"
            labelposition="right"
            textalign="initial"
            textcolor="inherit"
            textvariant="body1"
            textweight="Medium"
            type="checkbox"
          >
            Tata
          </span>
          <div
            class="c8"
          >
            <input
              class="c9"
              disabled=""
              id="Tata-Cars-select-all"
              type="checkbox"
            />
            <div
              class="c10 c11"
            >
              <svg
                class="c12 c13"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        <div
          class="c15"
          columns="2"
          id="Tata-Cars-options"
        >
          <label
            class="c5"
            disabled=""
            for="Jaguar-Tata-Cars"
            id="Jaguar-Tata-Cars-wrapper"
            labelposition="right"
          >
            <span
              class="c6 c7"
              disabled=""
              id="Jaguar-Tata-Cars-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              Jaguar
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Jaguar-Tata-Cars"
                name="jaguar"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            class="c5"
            disabled=""
            for="Land Rover-Tata-Cars"
            id="Land Rover-Tata-Cars-wrapper"
            labelposition="right"
          >
            <span
              class="c6 c7"
              disabled=""
              id="Land Rover-Tata-Cars-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              Land Rover
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Land Rover-Tata-Cars"
                name="landRover"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should render properly with fullWidth 1`] = `
.c13 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c13 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c1 {
  margin: 0;
  color: inherit;
  font-size: 1.6rem;
  font-weight: 600;
  letter-spacing: 0rem;
  line-height: 2.6rem;
  text-align: initial;
  display: inline-block;
}

.c6 {
  margin: 0;
  color: inherit;
  font-size: 1.4rem;
  font-weight: 400;
  letter-spacing: 0rem;
  line-height: 2.2rem;
  text-align: initial;
  display: inline-block;
}

.c0 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c14 {
  display: inline-flex;
  flex-direction: column;
  align-items: flex-start;
}

.c14>:first-child {
  margin-bottom: 0.9rem;
}

.c2 {
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
}

.c7 {
  user-select: none;
  cursor: not-allowed;
  color: #98A7B7;
  padding: 0 1.6rem;
}

.c4 {
  display: grid;
  grid-template-columns: repeat(1, 1fr);
}

.c15 {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  margin-left: 4rem;
}

.c3 {
  white-space: initial;
  font-size: 1.4rem;
  line-height: 2.2rem;
  margin-top: 0.3rem;
  margin-bottom: 1.8rem;
  color: #98A7B7;
}

.c11 {
  border: 0.15rem solid;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: 22.2%;
  transition: all 100ms ease-out;
  display: flex;
  justify-content: center;
  align-items: center;
}

.c11 .c12 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c9 {
  opacity: 0;
  margin: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  outline: none;
  position: absolute;
}

.c9:checked~.c10 {
  border-color: #dfe4e9;
  background-color: #dfe4e9;
}

.c9:checked~.c10 .c12 {
  transform: scale(1);
}

.c9:checked~.c10 .c12 * {
  fill: #98A7B7;
}

.c9:not(:checked)~.c10 {
  background-color: transparent;
  border-color: #98A7B7;
}

.c9:not(:disabled):focus~.c10 {
  box-shadow: 0 0 0.8rem 0 rgba(56,114,210,0.35);
  border-color: #3872D2;
}

.c9:not(:disabled):focus:not(:checked)~.c10 {
  border-color: #3872D2;
}

.c8 {
  margin: 0.3rem;
  flex-shrink: 0;
  width: 1.8rem;
  height: 1.8rem;
  position: relative;
}

.c5 {
  display: inline-flex;
  cursor: not-allowed;
  padding: 0.8rem 0;
  align-items: center;
  justify-content: flex-end;
  flex-direction: row-reverse;
}

.c5 * {
  cursor: not-allowed;
}

<div>
  <div
    aria-describedby="Cars-helper-text"
    class="c0"
    id="Cars-wrapper"
    type="checkbox"
  >
    <span
      class="c1 c2"
      disabled=""
      id="Cars-label"
      textalign="initial"
      textcolor="inherit"
      textvariant="body1"
      textweight="Medium"
      type="checkbox"
    >
      Cars
    </span>
    <span
      class="c3"
      disabled=""
      id="Cars-helper-text"
      type="checkbox"
    >
      Helper Text
    </span>
    <div
      class="c4"
      columns="1"
      id="Cars-options"
    >
      <label
        class="c5"
        disabled=""
        for="Honda-Cars"
        id="Honda-Cars-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          disabled=""
          id="Honda-Cars-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Honda
        </span>
        <div
          class="c8"
        >
          <input
            class="c9"
            disabled=""
            id="Honda-Cars"
            name="honda"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <label
        class="c5"
        disabled=""
        for="Hyundai-Cars"
        id="Hyundai-Cars-wrapper"
        labelposition="right"
      >
        <span
          class="c6 c7"
          disabled=""
          id="Hyundai-Cars-label"
          labelposition="right"
          textalign="initial"
          textcolor="inherit"
          type="checkbox"
        >
          Hyundai
        </span>
        <div
          class="c8"
        >
          <input
            checked=""
            class="c9"
            disabled=""
            id="Hyundai-Cars"
            name="hyundai"
            type="checkbox"
          />
          <div
            class="c10 c11"
          >
            <svg
              class="c12 c13"
              fill="none"
              height="1em"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                fill="green"
              />
            </svg>
          </div>
        </div>
      </label>
      <div
        aria-describedby="Tata-Cars-helper-text"
        class="c14"
        id="Tata-Cars-wrapper"
        type="checkbox"
      >
        <label
          class="c5"
          disabled=""
          for="Tata-Cars-select-all"
          id="Tata-Cars-select-all-wrapper"
          labelposition="right"
        >
          <span
            class="c1 c7"
            disabled=""
            id="Tata-Cars-select-all-label"
            labelposition="right"
            textalign="initial"
            textcolor="inherit"
            textvariant="body1"
            textweight="Medium"
            type="checkbox"
          >
            Tata
          </span>
          <div
            class="c8"
          >
            <input
              class="c9"
              disabled=""
              id="Tata-Cars-select-all"
              type="checkbox"
            />
            <div
              class="c10 c11"
            >
              <svg
                class="c12 c13"
                fill="none"
                height="1em"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                  fill="green"
                />
              </svg>
            </div>
          </div>
        </label>
        <div
          class="c15"
          columns="2"
          id="Tata-Cars-options"
        >
          <label
            class="c5"
            disabled=""
            for="Jaguar-Tata-Cars"
            id="Jaguar-Tata-Cars-wrapper"
            labelposition="right"
          >
            <span
              class="c6 c7"
              disabled=""
              id="Jaguar-Tata-Cars-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              Jaguar
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Jaguar-Tata-Cars"
                name="jaguar"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
          <label
            class="c5"
            disabled=""
            for="Land Rover-Tata-Cars"
            id="Land Rover-Tata-Cars-wrapper"
            labelposition="right"
          >
            <span
              class="c6 c7"
              disabled=""
              id="Land Rover-Tata-Cars-label"
              labelposition="right"
              textalign="initial"
              textcolor="inherit"
              type="checkbox"
            >
              Land Rover
            </span>
            <div
              class="c8"
            >
              <input
                class="c9"
                disabled=""
                id="Land Rover-Tata-Cars"
                name="landRover"
                type="checkbox"
              />
              <div
                class="c10 c11"
              >
                <svg
                  class="c12 c13"
                  fill="none"
                  height="1em"
                  viewBox="0 0 24 24"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
                    fill="green"
                  />
                </svg>
              </div>
            </div>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CheckboxGroup component should show indeterminate state when any one option is selected but not all 1`] = `
.c1 {
  overflow: visible;
  font-size: 2.4rem;
  transition: all 100ms linear;
  cursor: inherit;
}

.c1 * {
  fill-opacity: 1;
  transition: all 100ms linear;
  fill: #607890;
}

.c4 .c0 {
  pointer-events: none;
  z-index: 1;
  transition: all 200ms ease-in-out;
  transform: scale(0);
  width: 100%;
  height: 100%;
  margin-right: 0.05rem;
}

.c2:checked~.c3 .c0 {
  transform: scale(1);
}

.c2:checked~.c3 .c0 * {
  fill: #ffffff;
}

<svg
  class="c0 c1"
  fill="none"
  height="1em"
  viewBox="0 0 24 24"
  width="1em"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M8.795 15.875l-3.47-3.47a.996.996 0 0 0-1.41 0 .996.996 0 0 0 0 1.41l4.18 4.18c.39.39 1.02.39 1.41 0l10.58-10.58a.996.996 0 1 0-1.41-1.41l-9.88 9.87z"
    fill="green"
  />
</svg>
`;
